--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,49 @@
-sudo: false
+# sudo: false
+# language: python
+# python:
+#   - 2.7
+# cache:
+#   directories:
+#   - node_modules
+#
+# before_install:
+#   - npm install aglio
+#
+# script:
+#   - docker build -t history-tests . -f ./tests/Dockerfile
+#   - docker-compose -f ./tests/docker-compose.yml up -d mongodb
+#   - docker-compose -f ./tests/docker-compose.yml run history
+#
+# services:
+#   - docker
+#
+# after_success:
+#   - travis/publish.sh
+#   - travis/deploy-gh-pages.sh
+
+###########################################################
+
 language: python
+sudo: required
+services:
+  - mongodb
 python:
-  - 2.7
+  - '2.7'
 cache:
   directories:
   - node_modules
-
-before_install:
+install:
+  - pip install -r requirements/dev-requirements.txt -r requirements/requirements.txt -r requirements/test-requirements.txt
   - npm install aglio
-
-script:
-  - docker build -t history-tests . -f ./tests/Dockerfile
+  - npm install -g dredd --no-optional
+before_script:
   - docker-compose -f ./tests/docker-compose.yml up -d mongodb
-  - docker-compose -f ./tests/docker-compose.yml run history
-
-services:
-  - docker
-
+  - python setup.py install
+# env:
+  ############
+script:
+  - docker build -t ${TRAVIS_REPO_SLUG} .
+  - tests/start-test.sh
 after_success:
   - travis/publish.sh
   - travis/deploy-gh-pages.sh
