--- a/.travis.yml
+++ b/.travis.yml
@@ -38,9 +38,7 @@ install:
   - npm install -g dredd --no-optional
 before_script:
   - docker-compose -f ./tests/docker-compose.yml up -d mongodb
-  - python setup.py install
-# env:
-  ############
+  # - python setup.py install
 script:
   - docker build -t ${TRAVIS_REPO_SLUG} .
   - tests/start-test.sh
